Merged revisions 9908-9921,9923-9931,9933-9954,9956-9992,9994-10055,10060-10072,10074-10098,10100-10101 via svnmerge from https://svn.codehaus.org/mule/branches/mule-2.x-jdk5
................
  r9908 | holger | 2007-11-27 18:32:04 +0100 (Di, 27 Nov 2007) | 25 lines
  
  Merged revisions 9745-9761,9763-9772,9774-9775,9778-9784,9787-9798,9800-9808,9810-9817,9819-9822,9824-9885,9887-9904 via svnmerge from 
  https://svn.codehaus.org/mule/trunk/mule
  
  ........
    r9789 | holger | 2007-11-19 20:02:17 +0100 (Mo, 19 Nov 2007) | 1 line
    
    don't define global xml versions any longer
  ........
    r9791 | holger | 2007-11-19 20:51:16 +0100 (Mo, 19 Nov 2007) | 1 line
    
    thank you http://jira.codehaus.org/browse/MNG-3007
  ........
    r9813 | holger | 2007-11-21 17:13:53 +0100 (Mi, 21 Nov 2007) | 2 lines
    
    initial (still disabled) support for "blacklisting" parts of the distribution. This will be a new feature in MAVP 1.2 :-)
  ........
    r9822 | holger | 2007-11-22 16:54:40 +0100 (Do, 22 Nov 2007) | 1 line
    
    more MULE-2700: full distribution now correctly bundles XML in separate endorsed direcory
  ........
    r9904 | holger | 2007-11-27 16:33:54 +0100 (Di, 27 Nov 2007) | 2 lines
    
    These bits are unfinished and turned out not be necessary after all. Basic idea was (and still is) good though.
  ........
................
  r9909 | holger | 2007-11-27 19:04:59 +0100 (Di, 27 Nov 2007) | 32 lines
  
  Merged revisions 9743-9761,9763-9772,9774-9775,9778-9785 via svnmerge from 
  https://svn.codehaus.org/mule/trunk/mule
  
  ................
    r9785 | holger | 2007-11-19 17:27:20 +0100 (Mo, 19 Nov 2007) | 25 lines
    
    Merged revisions 9717-9743,9745-9782,9784 via svnmerge from 
    https://svn.codehaus.org/mule/branches/mule-1.4-noxml
    
    ........
      r9743 | holger | 2007-11-16 20:26:29 +0100 (Fr, 16 Nov 2007) | 1 line
      
      only pull changes from trunk
    ........
      r9745 | holger | 2007-11-16 20:39:50 +0100 (Fr, 1