@@ -94,12 +94,16 @@ rem ATTENTION: %_REALPATH% contains a trailing path delimiter that will cause th
 rem (making MULE_EXE as absolute path to enable wrapper include additional configs correctly)
 for /f "tokens=* delims= " %%a in ('attrib %MULE_HOME%\bin') do set MULE_EXE=%%a
 
+rem add XML compatibility jars when running with JDK 1.4
+java -version 2>&1 | findstr "1.4" >NUL
+IF %ERRORLEVEL% == 0 set MULE_ENDORSED=-M-Djava.endorsed.dirs="%MULE_HOME%\lib\endorsed"
+
 rem Mule options: Set the working directory to the current one and pass all command-line
 rem options (-config, -builder, etc.) straight through to the main() method.
 set MULE_OPTS=set.MULE_APP=%MULE_APP% set.MULE_APP_LONG=%MULE_APP_LONG% set.MULE_EXE="%MULE_EXE%" set.MULE_LIB=%MULE_LIB% wrapper.working.dir="%CD%" wrapper.app.parameter.1=%1 wrapper.app.parameter.2=%2  wrapper.app.parameter.3=%3  wrapper.app.parameter.4=%4  wrapper.app.parameter.5=%5  wrapper.app.parameter.6=%6  wrapper.app.parameter.7=%7  wrapper.app.parameter.8=%8 wrapper.app.parameter.9=%9
 
 rem Adding additional jvm arguments to wrapper configuration if needed
-call %MULE_HOME%\bin\launcher.bat %MULE_HOME%\bin\additional.groovy %_WRAPPER_CONF% "%JPDA_OPTS%" %*
+call %MULE_HOME%\bin\launcher.bat %MULE_HOME%\bin\additional.groovy %_WRAPPER_CONF% "%JPDA_OPTS%" "%MULE_ENDORSED%" %*
 
 :run
 
